Enhance README.md with detailed project overview, structure, and task descriptions for advanced fraud detection algorithm implementation, including classes for transaction and alert handling, logging configuration, and testing strategies.